--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
   "devDependencies": {
-    "@swc/cli": "^0.1.55",
-    "@swc/core": "^1.2.148",
-    "@swc/jest": "^0.2.20",
-    "@types/jest": "^27.4.1",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.68",
+    "@swc/jest": "^0.2.26",
+    "@types/jest": "^29.5.3",
     "@types/jstoxml": "^2.0.2",
     "@types/supertest": "^2.0.12",
-    "@types/uuid": "^8.3.4",
-    "jest": "^27.5.1",
-    "supertest": "^6.2.2",
-    "ts-node": "^10.6.0",
-    "typescript": "^4.5.5"
+    "jest": "^29.6.1",
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
+    "typescript": "^5.1.6"
   },
   "scripts": {
     "test": "npm run tsc -- --noEmit && jest",
     "tsc": "tsc"
   },
   "dependencies": {
-    "@types/express": "^4.17.13",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "jstoxml": "^3.2.3",
+    "@types/express": "^4.17.17",
+    "@types/uuid": "^9.0.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jstoxml": "^3.2.8",
     "nodemon": "^3.0.1",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.17.0",
-    "sequelize-typescript": "^2.1.3",
-    "sqlite3": "^5.0.2",
-    "uuid": "^8.3.2",
-    "yup": "^0.32.11"
+    "sequelize": "^6.32.1",
+    "sequelize-typescript": "^2.1.5",
+    "sqlite3": "^5.1.6",
+    "uuid": "^9.0.0",
+    "yup": "^1.2.0"
   }
 }
